# Django-GraphQL-tutorial

./: README.md  db.sqlite3  pyproject.toml
books/: models.py  schema.py  urls.py
books/migrations/: 0001_initial.py
core/: settings.py
